Primera página web V2

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <!--Etiquetas header-->
     <h1>Hola Mundo</h1>
+    <h2>Hola Mundo</h2>
+    <h3>Hola Mundo</h3>
+    <h4>Hola mundo</h4>
+    <h5>Hola mundo</h5>
+    <h6>Hola mundo</h6>
 
     
 </body>
